fixes line wrapping for long song titles

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -52,6 +52,7 @@ a
   display inline-block
   margin .5em
   vertical-align top
+  white-space normal
   default-animate()
   &:hover
     shadow 0 0 .5em rgba(0,0,0,.5)
